binding/python/graphiti.py


    # HID control
    # @function start_hid
    # @brief Start a HID connection to the device using vendor/product IDs.
    # @param self The Graphiti instance.
    # @param vendor_id USB vendor ID.
    # @param product_id USB product ID.
    # @param key_events Enable key events (default True).
    # @param touch_events Enable touch events (default True).
    # @return True on success, False on failure.
    def start_hid(self, vendor_id: int, product_id: int, key_events: bool = True, touch_events: bool = True) -> bool:
        return self._lib.graphiti_startUpHID(
            self._handle,
            c_uint16(vendor_id),
            c_uint16(product_id),
            c_bool(key_events),
            c_bool(touch_events)
        )

    # @function shutdown_hid
    # @brief Shutdown a previously opened HID connection.
    # @param self The Graphiti instance.
    # @param key_events Enable key events (default True).
    # @param touch_events Enable touch events (default True).
    # @return None
    def shutdown_hid(self, key_events: bool = True, touch_events: bool = True):
        self._lib.graphiti_shutDownHID(self._handle, c_bool(key_events), c_bool(touch_events))

    # Extension screen management
    # @function get_index
    # @brief Return a library-specific index for the given row/column.
    # @param self The Graphiti instance.
    # @param row Row index.
    # @param col Column index.
    # @return Integer index.
    def get_index(self, row: int, col: int) -> int:
        return self._lib.graphiti_index(self._handle, row, col)

    # @function set_pin
    # @brief Set a single pin to the requested height (immediate command).
    # @param self The Graphiti instance.
    # @param row Row index.
    # @param col Column index.
    # @param height Pin height.
    # @return None
    def set_pin(self, row: int, col: int, height: int):
        self._lib.graphiti_setPin(self._handle, row, col, height)

    # @function clear_screen
    # @brief Clear the entire tactile display.
    # @param self The Graphiti instance.
    # @return None
    def clear_screen(self):
        self._lib.graphiti_clearScreen(self._handle)

    # @function sleep
    # @brief Sleep the device (or pause command processing) for given seconds.
    # @param self The Graphiti instance.
    # @param seconds Number of seconds to sleep.
    # @return None
    def sleep(self, seconds: int):
        self._lib.graphiti_sleep(self._handle, seconds)

    # @function start_response_thread
    # @brief Start an internal thread that listens for device responses/events.
    # @param self The Graphiti instance.
    # @return None
    def start_response_thread(self):
        self._lib.graphiti_startResponseThread(self._handle)

    # @function stop_response_thread
    # @brief Stop the internal response/event thread.
    # @param self The Graphiti instance.
    # @return None
    def stop_response_thread(self):
        self._lib.graphiti_stopResponseThread(self._handle)

    # Event handling
    # @function get_next_output_event
    # @brief Fetch the next ASCII output event from the device, or None if none.
    # @param self The Graphiti instance.
    # @return Output string or None.
    def get_next_output_event(self) -> Optional[str]:
        buf = create_string_buffer(512)
        self._lib.graphiti_getNextOutputEvent(self._handle, buf, len(buf))
        output = buf.value.decode('utf-8')
        return output if output else None

    # @function get_next_display_status_event
    # @brief Get the next display-status event as a list of ints, or None.
    # @param self The Graphiti instance.
    # @return List of ints or None.
    def get_next_display_status_event(self) -> list[int] | None:
        MAX_LEN = 2400
        buffer = (c_int * MAX_LEN)()
        self._lib.graphiti_getNextDisplayStatusEvent.argtypes = [c_void_p, POINTER(c_int), c_int]
        self._lib.graphiti_getNextDisplayStatusEvent.restype = c_int
        count = self._lib.graphiti_getNextDisplayStatusEvent(self._handle, buffer, MAX_LEN)
        if count <= 0:
            return None
        return list(buffer[:count])

    # @function get_next_key_event
    # @brief Fetch the next key event as a list of strings, or None.
    # @param self The Graphiti instance.
    # @return List of key strings or None.
    def get_next_key_event(self) -> list[str] | None:
        MAX_KEYS = 14
        MAX_STRING_LEN = 64
        string_buffers = [create_string_buffer(MAX_STRING_LEN) for _ in range(MAX_KEYS)]
        key_array_type = c_char_p * MAX_KEYS
        key_array = key_array_type(*(cast(buf, c_char_p) for buf in string_buffers))
        self._lib.graphiti_getNextKeyEvent.argtypes = [c_void_p, POINTER(c_char_p), c_int]
        self._lib.graphiti_getNextKeyEvent.restype = c_int
        count = self._lib.graphiti_getNextKeyEvent(self._handle, key_array, MAX_STRING_LEN)
        if count <= 0:
            return None
        return [buf.value.decode("utf-8") for buf in string_buffers[:count]]

    # @function get_next_gesture_event
    # @brief Fetch the next gesture event string from the device, or None.
    # @param self The Graphiti instance.
    # @return Gesture event string or None.
    def get_next_gesture_event(self) -> Optional[str]:
        buf = create_string_buffer(512)
        self._lib.graphiti_getNextGestureEvent(self._handle, buf, len(buf))
        output = buf.value.decode('utf-8')
        return output if output else None

    # @function get_next_draw_event
    # @brief Fetch the next draw event and return a list of PinInfo_C objects.
    # @param self The Graphiti instance.
    # @return List of PinInfo_C or None.
    def get_next_draw_event(self) -> list[PinInfo_C] | None:
        MAX_PINS = 2400
        pins = (PinInfo_C * MAX_PINS)()
        self._lib.graphiti_getNextDrawEvent.argtypes = [c_void_p, POINTER(PinInfo_C), c_int]
        self._lib.graphiti_getNextDrawEvent.restype = c_int
        count = self._lib.graphiti_getNextDrawEvent(self._handle, pins, MAX_PINS)
        if count <= 0:
            return None
        return list(pins[:count])

    # Device control
    # @function send_ack
    # @brief Send an ACK to the device acknowledging the last command.
    # @param self The Graphiti instance.
    # @return None
    def send_ack(self):
        self._lib.graphiti_sendACK(self._handle)

    # @function send_nack
    # @brief Send a NACK to the device to indicate failure or rejection.
    # @param self The Graphiti instance.
    # @return None
    def send_nack(self):
        self._lib.graphiti_sendNACK(self._handle)

    # @function get_software_version
    # @brief Request the device software version (no direct return).
    # @param self The Graphiti instance.
    # @return None
    def get_software_version(self):
        self._lib.graphiti_getSoftwareVersion(self._handle)

    # @function get_hardware_version
    # @brief Request the device hardware version (no direct return).
    # @param self The Graphiti instance.
    # @return None
    def get_hardware_version(self):
        self._lib.graphiti_getHardwareVersion(self._handle)

    # @function get_get_serial_number
    # @brief Request the device serial number (no direct return).
    # @param self The Graphiti instance.
    # @return None
    def get_get_serial_number(self):
        self._lib.graphiti_getSerialNumber(self._handle)

    # @function get_get_battery_status
    # @brief Request the battery status from the device.
    # @param self The Graphiti instance.
    # @return None
    def get_get_battery_status(self):
        self._lib.graphiti_getBatteryStatus(self._handle)

    # @function get_resolution_information
    # @brief Request the display resolution information.
    # @param self The Graphiti instance.
    # @return None
    def get_resolution_information(self):
        self._lib.graphiti_getResolutionInformation(self._handle)

    # @function get_device_orientation
    # @brief Request the device orientation (portrait/landscape etc.).
    # @param self The Graphiti instance.
    # @return None
    def get_device_orientation(self):
        self._lib.graphiti_getDeviceOrientation(self._handle)

    # @function get_height_information
    # @brief Request tactile height information for the device.
    # @param self The Graphiti instance.
    # @return None
    def get_height_information(self):
        self._lib.graphiti_getHeightInformation(self._handle)

    # @function get_device_name
    # @brief Request the human-readable device name.
    # @param self The Graphiti instance.
    # @return None
    def get_device_name(self):
        self._lib.graphiti_getDeviceName(self._handle)

    # Display Commands

    # @function update_display
    # @brief Update the full display buffer with raw bytes.
    # @param self The Graphiti instance.
    # @param data Byte buffer for display.
    # @return None
    def update_display(self, data: bytes):
        buf = (c_uint8 * len(data))(*data)
        self._lib.graphiti_updateDisplay(self._handle, buf, len(data))

    # @function set_display
    # @brief Apply the prepared buffer to the physical display.
    # @param self The Graphiti instance.
    # @return None
    def set_display(self):
        self._lib.graphiti_setDisplay(self._handle)

    # @function clear_display
    # @brief Clear the current display contents immediately.
    # @param self The Graphiti instance.
    # @return None
    def clear_display(self):
        self._lib.graphiti_clearDisplay(self._handle)

    # @function update_single_pixel
    # @brief Update a single pixel's height and blink attributes.
    # @param self The Graphiti instance.
    # @param row Row index.
    # @param column Column index.
    # @param height Pin height.
    # @param blink_rate Blink rate.
    # @return None
    def update_single_pixel(self, row: int, column: int, height: int, blink_rate: int):
        self._lib.graphiti_updateSinglePixel(self._handle, row, column, height, blink_rate)

    # @function update_single_row
    # @brief Update a single row with the provided byte row buffer.
    # @param self The Graphiti instance.
    # @param row Row index.
    # @param data Byte buffer for row.
    # @return None
    def update_single_row(self, row: int, data: bytes):
        buf = (c_uint8 * len(data))(*data)
        self._lib.graphiti_updateSingleRow(self._handle, row, buf, len(data))

    # @function update_single_column
    # @brief Update a single column with the provided byte column buffer.
    # @param self The Graphiti instance.
    # @param column Column index.
    # @param data Byte buffer for column.
    # @return None
    def update_single_column(self, column: int, data: bytes):
        buf = (c_uint8 * len(data))(*data)
        self._lib.graphiti_updateSingleColumn(self._handle, column, buf, len(data))

    # Status calls

    # @function get_all_pixels_position_status
    # @brief Query the device for status of all pixel positions.
    # @param self The Graphiti instance.
    # @return None
    def get_all_pixels_position_status(self):
        self._lib.graphiti_getAllPixelsPositionStatus(self._handle)

    # @function get_single_pixel_position_status
    # @brief Query status of a single pixel position (expects args).
    # @param self The Graphiti instance.
    # @return None
    def get_single_pixel_position_status(self):
        self._lib.graphiti_getSinglePixelPositionStatus(self._handle)

    # @function get_single_row_pixel_position_status
    # @brief Query status of a single row (expects row arg).
    # @param self The Graphiti instance.
    # @return None
    def get_single_row_pixel_position_status(self):
        self._lib.graphiti_getSingleRowPixelPositionStatus(self._handle)
